--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/index.css">
     <script src="./js/script.js" defer></script>
-    <title>My Web Site</title>
+    <title>Alan Oliveira | Front-end Developer</title>
 </head>
 <body>
 
@@ -22,7 +22,7 @@
         </div>
 
         <p id="bio">
-            Apaixonado por tecnologia tentando viver de codiguinhos :D. Graduando em Ciência da Computação - 3º período.
+            Apaixonado por tecnologia tentando viver de codiguinhos :D
         </p>
 
         <ul id="tecnologias">
@@ -109,11 +109,11 @@
                 <ul class="nav-list">
 
                     <li class="list-items">
-                        <a href="" class="link-items">Sobre mim</a>
+                        <button class="link-items selected">Sobre mim</button>
                     </li>
                     
                     <li class="list-items">
-                        <a href="" class="link-items">Projetos</a>
+                        <button href="" class="link-items">Projetos</button>
                     </li>
 
                     <li class="list-items">
@@ -126,7 +126,39 @@
 
         </header>
 
-        <section class="conteudo">
+        <section class="conteudo-sobre">
+
+            <h1 class="conteudo-titulo">Seja bem vindo!</h1>
+
+            <p>
+                <span class="primeira-letra">O</span>lá, me chamo Alan e sou graduando em Ciência da computação, atualmente no 3º perído. 
+            </p>
+
+            <p>
+                <span class="primeira-letra">N</span>o momento estou estudando, e me preparando, através de cursos extracurriculares para me tornar um desenvolverdor Fullstack.
+            </p>
+
+            <p>
+                <span class="primeira-letra">M</span>eu foco atualmente é o Front-End, pois acredito ser a porta de entrada para a área de programação.
+            </p>
+
+            <p>
+                <span class="primeira-letra">E</span>stou em busca da minha primeira vaga como estagiário em programação.
+            </p>
+
+            <h1 class="cursos">Cursos em Andamento:</h1>
+
+            <p>
+                • Fullstack JavaScript - OneBitCode
+            </p>
+
+            <p>
+                • Programação Orientada a Objetos C# - Nelio Alves (udemy)
+            </p>
+
+        </section>
+
+        <section class="conteudo-projetos">
 
         </section>
 
